WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274226
[Win] REGRESSION(
278807@main
): fast/canvas/drawImage-source-rect-outside-image.html are ImageOnlyFailure
https://bugs.webkit.org/show_bug.cgi?id=274226
Summary
[Win] REGRESSION(278807@main): fast/canvas/drawImage-source-rect-outside-imag...
Fujii Hironori
Reported
2024-05-15 13:22:39 PDT
After
278807@main
, the following tests are failing only for Windows port. fast/canvas/drawImage-source-rect-outside-image.html [ ImageOnlyFailure ] fast/canvas/drawImage-srcRect-clipping.html [ ImageOnlyFailure ]
278807@main
added two new tests which are also failing only for Windows port. fast/canvas/canvas-drawImage-negative-coordinate.html [ ImageOnlyFailure ] fast/canvas/canvas-drawImage-out-of-bounds-coordinate.html [ ImageOnlyFailure ] History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast%2Fcanvas%2FdrawImage-srcRect-clipping.html&test=fast%2Fcanvas%2FdrawImage-source-rect-outside-image.html
Buildbot: builder WinCairo-64-bit-Release-Tests build 4630 :
278807@main
https://build.webkit.org/#/builders/728/builds/4630
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-05-20 17:18:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28813
EWS
Comment 2
2024-05-21 14:13:27 PDT
Committed
279075@main
(743065037cee): <
https://commits.webkit.org/279075@main
> Reviewed commits have been landed. Closing PR #28813 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-21 14:14:14 PDT
<
rdar://problem/128493497
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug