REGRESSION(278807@main): [cairo] drawSurface should clip the source rectangle to the source image https://bugs.webkit.org/show_bug.cgi?id=274226

Reviewed by Don Olmstead.

After https://commits.webkit.org/278807@main removed the function
normalizeSourceAndDestination of CanvasRenderingContext2DBase.cpp,
layout tests fast/canvas/drawImage-source-rect-outside-image.html and
fast/canvas/drawImage-srcRect-clipping.html were failing for cairo
based ports.

The function adjusted the source rectangle and the destination
rectangle so that when the source rectangle is outside the source
image, the source rectangle should be clipped in the source image and
the destination rectangle should be clipped in the same proportion.

The function drawSurface of CairoOperations.cpp still needs the logic
for the subsurface code path.

* LayoutTests/platform/wincairo/TestExpectations:
* Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:
(calculateSubsurfaceRect): Added.

Canonical link: https://commits.webkit.org/279075@main